Correct arguments for cimmethod

--- a/templates/change_credentials.ps1.erb
+++ b/templates/change_credentials.ps1.erb
@@ -6,8 +6,20 @@ $privilege = "SeServiceLogonRight"
 [Carbon.LSA]::GrantPrivileges($username, $privilege)
 $serverName = $env:COMPUTERNAME
 $service = '<%= @servicename %>'
-$svc = Get-CimInstance Win32_Service -Filter -ComputerName $serverName -filter "Name='$service'"
+$svc = Get-CimInstance Win32_Service -ComputerName $serverName -Filter "Name='$service'"
 $svc | Invoke-CimMethod -MethodName "StopService" | Out-Null
-$arguments = ($null,$null,$null,$null,$null,$null,$username,$password,$null,$null,$null)
+$arguments = @{
+    DesktopInteract = $null
+    DisplayName = $null
+    ErrorControl = $null
+    LoadOrderGroup = $null
+    LoadOrderGroupDependencies = $null
+    PathName = $null
+    ServiceDependencies = $null
+    ServiceType = $null
+    StartMode = $null
+    StartName = $username
+    StartPassword = $password
+}
 $svc | Invoke-CimMethod -MethodName "Change" -Arguments $arguments | Out-Null
 $svc | Invoke-CimMethod -MethodName "StartService" | Out-Null
