--- a/templates/query_credentials.ps1.erb
+++ b/templates/query_credentials.ps1.erb
@@ -11,7 +11,7 @@ else
 {
     $currentUser = $username
 }
-if ($svc.StartName -like $currentUser)
+if ($currentUser -like $username)
 {
     exit 1
 }
