Fix query logic again

--- a/templates/query_credentials.ps1.erb
+++ b/templates/query_credentials.ps1.erb
@@ -11,7 +11,11 @@ else
 {
     $currentUser = $username
 }
-if ($currentUser -like $username)
+if ($currentUser -notlike $username)
 {
-    exit 1
+    Exit 1
+}
+else
+{
+    Exit 0
 }
