Fix logic again

--- a/templates/query_credentials.ps1.erb
+++ b/templates/query_credentials.ps1.erb
@@ -11,7 +11,7 @@ else
 {
     $currentUser = $username
 }
-if ($currentUser -notlike $username)
+if ($currentUser -like $username)
 {
     Exit 1
 }
