--- a/templates/query_credentials.ps1.erb
+++ b/templates/query_credentials.ps1.erb
@@ -9,7 +9,7 @@ if ($svc.StartName.StartsWith(".\"))
 }
 else
 {
-    $currentUser = $username
+    $currentUser = $svc.StartName
 }
 if ($currentUser -like $username)
 {
